--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,17 +33,17 @@ jobs:
         run: west update
       - name: West Zephyr export
         run: west zephyr-export
-      - name: West Build (MakerDiary m60)
-        run: west build -s zmk/app -b nice_nano_v2 -- -DSHIELD=m60 -DZMK_CONFIG="${GITHUB_WORKSPACE}/config"
-      - name: MakerDiary m60 DTS File
+      - name: West Build (0-Sixty)
+        run: west build -s zmk/app -b nice_nano_v2 -- -DSHIELD=0_sixty -DZMK_CONFIG="${GITHUB_WORKSPACE}/config"
+      - name: 0-Sixty DTS File
         if: ${{ always() }}
         run: cat -n build/zephyr/nice_nano_v2.dts.pre.tmp
-      - name: MakerDiary m60 Kconfig file
+      - name: 0-Sixty Kconfig file
         run: cat build/zephyr/.config | grep -v "^#" | grep -v "^$"
       - name: Rename zmk.uf2
-        run: cp build/zephyr/zmk.uf2 m60_nice_nano_v2.uf2
-      - name: Archive (MakerDiary m60)
+        run: cp build/zephyr/zmk.uf2 0_sixty_nice_nano_v2.uf2
+      - name: Archive (0-Sixty)
         uses: actions/upload-artifact@v2
         with:
           name: firmware
-          path: m60_nice_nano_v2.uf2
+          path: 0_sixty_nice_nano_v2.uf2
