--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,7 +6,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     container:
-      image: zmkfirmware/zmk-build-arm:2.5
+      image: zmkfirmware/zmk-build-arm:stable
     name: Build
     steps:
       - name: Checkout
@@ -35,9 +35,6 @@ jobs:
         run: west zephyr-export
       - name: West Build (0-Sixty)
         run: west build -s zmk/app -b nice_nano_v2 -- -DSHIELD=0_sixty -DZMK_CONFIG="${GITHUB_WORKSPACE}/config"
-      - name: 0-Sixty DTS File
-        if: ${{ always() }}
-        run: cat -n build/zephyr/nice_nano_v2.dts.pre.tmp
       - name: 0-Sixty Kconfig file
         run: cat build/zephyr/.config | grep -v "^#" | grep -v "^$"
       - name: Rename zmk.uf2
